[metadata]
name = exvhp
version = 0.6.0
url = https://github.com/eXhumer/pyeXVHP
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE.md
description = Python interface to various video hosting platforms
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.9
zip_safe = False
packages = exvhp
install_requires =
    requests
    requests-toolbelt
    beautifulsoup4
    pydantic
