[metadata]
name = exvhp
version = 1.8.0
url = https://github.com/eXhumer/pyeXVHP
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
license = AGPL-3.0-only
license_file = COPYING.md
description = Python interface to various video hosting platforms
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.11
zip_safe = False
packages = exvhp
install_requires =
    httpx
    beautifulsoup4

[options.extras_require]
http2 =
    httpx[http2]

[flake8]
max-line-length = 99